themes/si8/css/style.css
/* ... */
.help-block,
.control-group .help-inline {
  color: #777777;
  font-size: 12px;
  margin: 5px 0 10px;
  padding: 0;
}
.help-block:first-child,
.control-group .help-inline:first-child {
  margin-top: 0;
}
/**
 * Variable Overrides.
 *
 * Modify this file to override the Bootstrap Framework variables. You can copy
 * these variables directly from ../bootstrap/less/variables.less to this file.
 */
footer {
  background-color: #333333;
  color: #ffffff;
  font-family: "Titillium Web", Helvetica, Arial, sans-serif;
  padding-top: 0 !important;
}
footer a {
  color: #65dcdf;
  text-decoration: underline;
}
footer a:hover {
  background: #333;
  color: #65dcdf;
  text-decoration: underline;
}
footer ul.menu {
  border-top: 1px solid #65dcdf;
  display: inline-block;
  padding: 5px 0;
}
footer .nav > li {
  display: inline;
}
footer .nav > li a {
  display: inline-block !important;
  font-size: 1.6rem;
  padding: 0 10px;
}
footer .nav > li a:hover {
  background: #333;
  color: #65dcdf;
  text-decoration: underline;
}
footer h4 {
  font-size: 2.5rem;
  line-height: 30px;
  font-weight: bold;
  margin-top: 0;
}
footer .logo {
  width: 55px;
  float: left;
  margin-right: 15px;
}
footer .valuta {
  background-color: #286bcc;
  margin-bottom: 50px;
  text-align: center;
  font-size: 2rem;
  padding: 16px;
}
footer .valuta a {
  display: inline-block;
  margin-left: 10px;
  color: #fff;
  text-decoration: none;
}
footer .valuta a:hover {
  background-color: transparent;
  text-decoration: underline;
}
footer .footer-header {
  font-weight: bold;
  margin-top: 40px;
  font-size: 2rem;
}
footer .footer-header .footer-title {
  font-size: 2.4rem;
}
footer .footer-content {
  margin-top: 20px;
}
footer .footer-content .social a {
  color: #65dcdf;
  display: inline-block;
  margin-right: 10px;
  font-size: 4rem;
}
footer .footer-content .content {
  padding: 25px 16px 16px 16px;
  border-top: 1px solid #555555;
  font-size: 1.3rem;
  color: #a5abb0;
}
footer .footer-content .content strong {
  font-size: 1.8rem;
  display: block;
  margin-bottom: 10px;
  color: #fff;
}
.header-top {
  background: #30373d;
  color: #fff;
  font-family: "Titillium Web", Helvetica, Arial, sans-serif;
}
.header-top a {
  color: #fff;
}
.header-top .logo {
  width: 25px;
  margin-right: 10px;
}
.header-top .header-top2 {
  position: absolute;
  top: 0;
  right: 0;
}
.header-top .header-top1 {
  padding: 10px 0;
  font-weight: bold;
}
.header-top .block-lang-dropdown {
  display: inline-block;
}
.header-top .accedi {
  border-radius: 0;
  background-color: #5389d6;
  display: inline-block;
  padding: 14px 60px;
  color: #fff;
  text-transform: uppercase;
  font-weight: bold;
}
.header-top .accedi:hover {
  text-decoration: underline;
}
.header-top .selettorelingua {
  background-color: #7ea6e0;
  float: left;
}
.header-top .selettorelingua ul {
  margin-bottom: 0;
  padding: 14px;
}
.header-top .selettorelingua ul li {
  display: inline-block;
  text-transform: uppercase;
  list-style-type: none;
}
.header-top .selettorelingua ul li::after {
  content: ' |';
}
.header-top .selettorelingua ul li:last-child::after {
  content: '';
}
.header-top .selettorelingua ul li a {
  padding: 0 7px;
}
.header-top .selettorelingua ul li a.is-active {
  font-weight: bold;
  text-decoration: underline;
}
#hamburger-toggle {
  font-size: 3.5rem;
  position: absolute;
  left: 50px;
  top: 50%;
  transform: translateY(-50%);
}
.header-main {
  background: #286bcc;
  color: #fff;
  padding: 0;
  position: relative;
}
.header-main a {
  color: #fff;
}
.header-main .icon-social {
  text-align: right;
  margin-top: 5px;
}
.header-main .icon-social a {
  font-size: 3rem;
  display: inline-block;
  margin-left: 15px;
}
.header-main .site-title {
  color: #fff;
  font-family: "Titillium Web", Helvetica, Arial, sans-serif;
  font-size: 3.7rem;
  padding: 36px 0;
}
.header-main .site-title .subtitle {
  font-size: 1.8rem;
  display: block;
}
.header-main .ricerca {
  margin-top: 5px;
}
.header-main .ricerca label {
  display: none;
}
.header-main .ricerca input.form-text {
  border: none;
  border-radius: 0;
  font-size: 1.5rem;
  height: 50px;
}
.header-main .ricerca button {
  color: #fff;
  background-color: #333;
  border: none;
  border-radius: 0;
  margin-right: 0;
  height: 50px;
  width: 50px;
  margin-left: -4px;
  font-size: 2.5rem;
}
.header-down {
  background-color: #5389d6;
  text-align: center;
}
.header-down .navbar-nav {
  display: inline-block;
  float: none;
  padding: 2px;
}
.header-down .navbar-nav a {
  color: #fff;
  font-family: "Titillium Web", Helvetica, Arial, sans-serif;
  font-size: 2rem;
}
.header-down .navbar-nav a:hover {
  background-color: transparent;
  text-decoration: underline;
}
body {
  margin-top: 0;
}
.main-container {
  margin-top: 30px;
}
.path-frontpage h1.page-header {
  display: none;
}
.path-frontpage ol.breadcrumb {
  display: none;
}
h1.page-header {
  border: 0;
  font-family: "Titillium Web", Helvetica, Arial, sans-serif;
  font-weight: bold;
  font-size: 4rem;
  float: left;
}
#block-addtoanybuttons {
  float: right;
}
#block-addtoanybuttons .a2a_svg,
#block-addtoanybuttons .a2a_count {
  border-radius: 0 !important;
}
#block-addtoanybuttons svg {
  background-color: #286bcc;
}
.slick-dots {
  bottom: -40px;
}
.slick-dots li button::before {
  font-size: 1.5rem;
}
ol.breadcrumb {
  background-color: transparent;
  padding-left: 0;
  text-transform: lowercase;
}
.block-facet--links ul {
  padding-left: 0;
}
.block-facet--links ul li {
  list-style-type: none;
  font-size: 2rem;
}
.sitemap {
  font-size: 2rem;
}
table td,
table th {
  padding: 5px;
}
#backtotop {
  background: url(../images/backtotop.png) no-repeat center center;
}
.paragraph--type--link-sezione {
  margin: 30px 0;
  color: #5389d6;
  font-size: 3rem;
  margin-left: -15px;
  margin-right: -15px;
}
.paragraph--type--link-sezione > .field {
  position: relative;
  min-height: 1px;
  padding-left: 15px;
  padding-right: 15px;
}
/* ... */

